fixed iframe extra-spacing bug. Still to do: hardcode in iframe heights for various screen sizes. A horrible hack for a horribly rushed site...

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,9 @@ body{
 h3#tickets_titleRegister {
  display: none;
 }
+iframe#ifeventzilla {
+	height: 370px;
+}
 
 @media all{
 	
